# botieyes

./: .gitignore  botieyes.code-workspace
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/features/001-emotion-driven-eyes/: generate_final_design.py
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
BotiEyes/: README.md  keywords.txt  library.properties
BotiEyes/examples/BasicEmotion/: BasicEmotion.ino
BotiEyes/examples/BrightnessChange/: BrightnessChange.ino
BotiEyes/examples/EyePosition/: EyePosition.ino
BotiEyes/examples/IdleBehavior/: IdleBehavior.ino
BotiEyes/examples/NetworkControl/: NetworkControl.ino
BotiEyes/src/: BotiEyes.cpp  BotiEyes.h  CMakeLists.txt  DisplayConfig.h  EmotionMapper.cpp  EmotionMapper.h  EmotionState.cpp  EmotionState.h  ExpressionParameters.cpp  ExpressionParameters.h  EyePositionState.cpp  EyePositionState.h  Interpolator.cpp  Interpolator.h  PlatformRandom.cpp  PlatformRandom.h  PlatformTime.cpp  PlatformTime.h  RenderingHelpers.cpp  RenderingHelpers.h
BotiEyes/src/net/: BotiEyesServer.cpp  BotiEyesServer.h  CommandCodec.cpp  CommandCodec.h  NetProtocol.h  SessionManager.cpp  SessionManager.h
controller/: botieyes_client.py  cli.py  requirements.txt  test_client.py
docs/: ARCHITECTURE_ENFORCEMENT.md  SYNCHRONIZATION_GUIDE.md  audit-report-2026-07-01.md  bugfix-twdt-initialization.md  display-config-review.md  firmware-architecture.md  postponed-features.md
emulator/: botieyes_emulator.py  emotion_mapper.py  eye_renderer.py  ui_controls.py
esp-idf/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
esp-idf/components/botieyes/: CMakeLists.txt  idf_component.yml
esp-idf/components/config_manager/: CMakeLists.txt  Kconfig
esp-idf/components/config_manager/include/: config_manager.h
esp-idf/components/config_manager/src/: config_manager.c
esp-idf/components/display/: CMakeLists.txt  README.md
esp-idf/components/display/include/: display_init.h  esp_st7789.h
esp-idf/components/display/src/: display_init.cpp  esp_ssd1306.cpp  esp_st7789.cpp
esp-idf/components/hal_board/: CMakeLists.txt  Kconfig  Kconfig.projbuild
esp-idf/components/hal_board/include/: hal_board.h  hal_display.h  hal_led.h
esp-idf/components/hal_board/src/: hal_board.c  hal_display.c  hal_display_i2c.c  hal_display_spi.c  hal_led.cpp
esp-idf/components/hal_board/src/boards/: esp32s3_spi.c  ttgo_lora32.c
esp-idf/components/health_monitor/: CMakeLists.txt  Kconfig
esp-idf/components/health_monitor/include/: health_monitor.h
esp-idf/components/health_monitor/src/: crash_log.c  task_registry.c  watchdog.c
esp-idf/components/ssd1306_config/: CMakeLists.txt  Kconfig.projbuild
esp-idf/components/state_machine/: CMakeLists.txt  Kconfig
esp-idf/components/state_machine/include/: app_state.h
esp-idf/components/state_machine/src/: app_state.c  state_events.c
esp-idf/components/wifi_manager/: CMakeLists.txt  Kconfig
esp-idf/components/wifi_manager/include/: wifi_manager.h
esp-idf/components/wifi_manager/src/: wifi_events.c  wifi_manager.c
esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  app_task.cpp  app_task.h  display_init.cpp  display_init.h  esp_ssd1306.cpp  esp_ssd1306.h  idf_component.yml  main.cpp  wifi_init.cpp  wifi_init.h
scripts/: check-postponed.sh
specs/001-emotion-driven-eyes/: data-model.md  design-expert-reviews.md  esp32-platform-review.md  hri-expert-review.md  implementation-decisions.md  plan.md  platform-reviews.md  quickstart.md  research.md  review-findings.md  spec.md  tasks.md  ui-design-review.md
specs/001-emotion-driven-eyes/checklists/: requirements.md
specs/001-emotion-driven-eyes/contracts/: BotiEyes-API.md
specs/002-esp32-network-service/: data-model.md  hardware-validation-checklist.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-esp32-network-service/checklists/: requirements.md
specs/002-esp32-network-service/contracts/: network-protocol.md
specs/003-ssd1306-spi-component/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ssd1306-spi-component/checklists/: requirements.md
specs/003-ssd1306-spi-component/contracts/: Kconfig-API.md
specs/004-industrial-firmware-architecture/: BUGFIX-PLAN.md  BUILD-RESOLUTION-SUMMARY.md  HAL-FIX-PLAN.md  ISSUE-SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-industrial-firmware-architecture/checklists/: requirements.md
specs/004-industrial-firmware-architecture/contracts/: component-api.md
specs/005-st7789-display-support/: PERFORMANCE_TESTING.md  RENDERING_COMPARISON.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-st7789-display-support/checklists/: requirements.md
specs/005-st7789-display-support/contracts/: display-driver-interface.md
tests/net/: Makefile  README.md  flood_test.py  test_command_codec.cpp  test_harness.h  test_session_manager.cpp
